<?xml version ="1.0" encoding ="utf-8"?><!--  Learn More about how to use App Actions: https://developer.android.com/guide/actions/index.html -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_overview"
        android:icon="@drawable/user_profile_icon_24dp"
        android:title="@string/overview"/>
    <item
        android:id="@+id/navigation_food"
        android:icon="@drawable/food_icon_24px"
        android:title="@string/food"/>
    <item
        android:id="@+id/navigation_running"
        android:icon="@drawable/running_shoe_icon_24px"
        android:title="@string/tvRunning"/>
    <item
        android:id="@+id/navigation_weight"
        android:icon="@drawable/weight_icon_24px"
        android:title="@string/weight"/>
</menu>