<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFood"
    tools:context=".FoodActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/food"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFoodMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/CalorieIntake" />

        <TextView
            android:id="@+id/tvCalCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <ProgressBar
            android:id="@+id/pbFoodCal"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:progress="0"
            android:progressDrawable="@drawable/circle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRemoveFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:gravity="center"
                android:text="@string/btnRemFood" />

            <Button
                android:id="@+id/btnAddFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:gravity="center"
                android:onClick="ShowPopup"
                android:text="@string/btnAddFood" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorFood"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnScanButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/buttonstyle"
                android:text="@string/btnScanBar" />

            <TextView
                android:id="@+id/tvRec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tvRecommend" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:text="TextView" />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:text="@string/btnBack" />

            <Button
                android:id="@+id/btnFoodSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:text="@string/Settings" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>