<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey"
    tools:context=".Running_Fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle"
                android:elevation="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTodayUveRan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/todayYouveRan"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvRunGoalMin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_weight="1"
                            android:paddingTop="5dp"
                            android:paddingBottom="15dp"
                            android:text="@string/DefaultRunGoalMin" />

                        <ProgressBar
                            android:id="@+id/progressBar2"
                            style="@android:style/Widget.ProgressBar.Horizontal"
                            android:layout_width="270dp"
                            android:layout_height="wrap_content"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp" />

                        <TextView
                            android:id="@+id/tvRunGoalMax"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:paddingTop="5dp"
                            android:paddingBottom="15dp"
                            android:text="@string/DefaultRunGoalMax" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvRunStats"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:gravity="center"
                        android:text="@string/tvStats" />

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:background="@color/colorLightGrey"
                        app:cardBackgroundColor="@color/colorLightGrey"
                        app:cardElevation="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvWeekRun"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center|top"
                                android:layout_marginTop="4dp"
                                android:gravity="center"
                                android:paddingTop="4dp"
                                android:text="@string/tvWeek"
                                android:textSize="30sp" />

                            <TableLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="1dp"
                                android:layout_weight="1">

                                <TableRow
                                    android:id="@+id/trMon"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <TextView
                                        android:id="@+id/textView"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="8dp"
                                        android:text="@string/monday" />

                                    <TextView
                                        android:id="@+id/tvMon"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="right"
                                        android:layout_marginLeft="16dp"
                                        android:text="@string/DefaultRunGoalMin" />
                                </TableRow>

                                <TableRow
                                    android:id="@+id/trTue"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <TextView
                                        android:id="@+id/textView5"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="8dp"
                                        android:text="@string/tuesday" />

                                    <TextView
                                        android:id="@+id/tvTue"
                                        android:layout_width="wrap_content"
                                        android:layout_height="match_parent"
                                        android:layout_gravity="right"
                                        android:layout_marginLeft="16dp"
                                        android:text="@string/DefaultRunGoalMin" />
                                </TableRow>

                                <TableRow
                                    android:id="@+id/trWed"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <TextView
                                        android:id="@+id/textView7"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="8dp"
                                        android:text="@string/wednesday" />

                                    <TextView
                                        android:id="@+id/tvWed"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="right"
                                        android:layout_marginLeft="16dp"
                                        android:text="@string/DefaultRunGoalMin" />
                                </TableRow>

                                <TableRow
                                    android:id="@+id/trThur"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <TextView
                                        android:id="@+id/textView9"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="8dp"
                                        android:text="@string/thursday" />

                                    <TextView
                                        android:id="@+id/tvThur"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="right"
                                        android:layout_marginLeft="16dp"
                                        android:text="@string/DefaultRunGoalMin" />
                                </TableRow>

                                <TableRow
                                    android:id="@+id/trFri"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <TextView
                                        android:id="@+id/textView11"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="8dp"
                                        android:text="@string/friday" />

                                    <TextView
                                        android:id="@+id/tvFri"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="right"
                                        android:layout_marginLeft="16dp"
                                        android:text="@string/DefaultRunGoalMin" />
                                </TableRow>

                                <TableRow
                                    android:id="@+id/trSat"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <TextView
                                        android:id="@+id/textView13"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="8dp"
                                        android:text="@string/saturday" />

                                    <TextView
                                        android:id="@+id/tvSat"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="right"
                                        android:layout_marginLeft="16dp"
                                        android:text="@string/DefaultRunGoalMin" />
                                </TableRow>

                                <TableRow
                                    android:id="@+id/trSun"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:id="@+id/textView15"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="8dp"
                                        android:text="@string/sunday" />

                                    <TextView
                                        android:id="@+id/tvSun"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="right"
                                        android:layout_marginLeft="16dp"
                                        android:text="@string/DefaultRunGoalMin" />
                                </TableRow>

                            </TableLayout>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnStartTrack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_margin="4dp"
                        android:background="@drawable/buttonrectangle"
                        android:text="@string/btnStartTracking" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_margin="4dp"
                        android:gravity="bottom"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnBack"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/buttonrectangle"
                            android:text="@string/btnBack" />

                        <Button
                            android:id="@+id/btnRunSettings"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/buttonrectangle"
                            android:text="@string/Settings" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>